Implementacion servicio ranking

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 
 <div class=" content">
-  <div class=" row">
+  <!--<div class=" row">
     <div class=" col-12">
       <div class=" card card-chart">
         <div class=" card-header">
@@ -63,8 +63,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class=" row">
+  </div>-->
+  <!--<div class=" row">
     <div class=" col-lg-4">
       <div class=" card card-chart">
         <div class=" card-header">
@@ -104,9 +104,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   <div class=" row">
-    <div class=" col-lg-6 col-md-12">
+    <!--<div class=" col-lg-6 col-md-12">
       <div class=" card card-tasks">
         <div class=" card-header">
           <h6 class=" title d-inline">Tasks(5)</h6>
@@ -314,65 +314,35 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class=" col-lg-6 col-md-12">
+    </div>-->
+    <div class=" col-lg-12 col-md-12">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" card-title">Simple Table</h4>
+          <h4 class=" card-title">Ranking Historico</h4>
         </div>
         <div class=" card-body">
           <div class=" table-responsive">
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
-                  <th>Name</th>
-                  <th>Country</th>
-                  <th>City</th>
-                  <th class=" text-center">Salary</th>
+                  <th >Posición</th>
+                  <th>Nombre</th>
+                  <th>Pais de Origen</th>
+                  <th>Residencia</th>
+                  <th>Status</th>
+                  <th>Torneo</th>
+                  <th class=" text-center">Puntos</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>Dakota Rice</td>
-                  <td>Niger</td>
-                  <td>Oud-Turnhout</td>
-                  <td class=" text-center">$36,738</td>
-                </tr>
-                <tr>
-                  <td>Minerva Hooper</td>
-                  <td>CuraÃ§ao</td>
-                  <td>Sinaai-Waas</td>
-                  <td class=" text-center">$23,789</td>
-                </tr>
-                <tr>
-                  <td>Sage Rodriguez</td>
-                  <td>Netherlands</td>
-                  <td>Baileux</td>
-                  <td class=" text-center">$56,142</td>
-                </tr>
-                <tr>
-                  <td>Philip Chaney</td>
-                  <td>Korea, South</td>
-                  <td>Overland Park</td>
-                  <td class=" text-center">$38,735</td>
-                </tr>
-                <tr>
-                  <td>Doris Greene</td>
-                  <td>Malawi</td>
-                  <td>Feldkirchen in KÃ¤rnten</td>
-                  <td class=" text-center">$63,542</td>
-                </tr>
-                <tr>
-                  <td>Mason Porter</td>
-                  <td>Chile</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$78,615</td>
-                </tr>
-                <tr>
-                  <td>Jon Porter</td>
-                  <td>Portugal</td>
-                  <td>Gloucester</td>
-                  <td class=" text-center">$98,615</td>
+                <tr *ngFor="let Ranking of Rankings">
+                  <th>{{Ranking.posicion+'º'}}</th>
+                  <td>{{Ranking.jugadorId.nombre}}</td>
+                  <td>{{Ranking.jugadorId.pais}}</td>
+                  <td>{{Ranking.jugadorId.residencia}}</td>
+                  <td>{{Ranking.status}}</td>
+                  <td>{{Ranking.torneoId.nombre}}</td>
+                  <td class=" text-center">{{Ranking.puntos}}</td>
                 </tr>
               </tbody>
             </table>
