Agregar avartar a table

--- a/src/assets/scss/black-dashboard.scss
+++ b/src/assets/scss/black-dashboard.scss
@@ -63,6 +63,8 @@
  // Custom components
 
  @import "black-dashboard/custom/alerts.scss";
+ @import "black-dashboard/custom/avatar-group.scss";
+ @import "black-dashboard/custom/avatar.scss";
  @import "black-dashboard/custom/buttons.scss";
  @import "black-dashboard/custom/dropdown.scss";
  @import "black-dashboard/custom/footer.scss";
