--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -326,10 +326,12 @@
               <thead class=" text-primary">
                 <tr>
                   <th >Posición</th>
+                  <th >Avatar</th>
                   <th>Nombre</th>
                   <th>Pais de Origen</th>
                   <th>Residencia</th>
                   <th>Status</th>
+                  <th>Victorias</th>
                   <th>Torneo</th>
                   <th class=" text-center">Puntos</th>
                 </tr>
@@ -337,10 +339,33 @@
               <tbody>
                 <tr *ngFor="let Ranking of Rankings">
                   <th>{{Ranking.posicion+'º'}}</th>
+                  <td>
+                    <div class="avatar-group">
+                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Ryan Tompson">
+                        <img alt="Image placeholder" src="../assets/img/theme/team-1-800x800.jpg" class="rounded-circle">
+                      </a>
+                    </div>
+                  </td>
                   <td>{{Ranking.jugadorId.nombre}}</td>
                   <td>{{Ranking.jugadorId.pais}}</td>
                   <td>{{Ranking.jugadorId.residencia}}</td>
                   <td>{{Ranking.status}}</td>
+                  <td>
+                    <div class="avatar-group">
+                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Ryan Tompson">
+                        <img alt="Image placeholder" src="../assets/img/theme/numero-3.jpeg" class="rounded-circle">
+                      </a>
+                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Romina Hadid">
+                        <img alt="Image placeholder" src="../assets/img/theme/numero-3.jpeg" class="rounded-circle">
+                      </a>
+                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Alexander Smith">
+                        <img alt="Image placeholder" src="../assets/img/theme/numero-3.jpeg" class="rounded-circle">
+                      </a>
+                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Jessica Doe">
+                        <img alt="Image placeholder" src="../assets/img/theme/numero-3.jpeg" class="rounded-circle">
+                      </a>
+                    </div>
+                  </td>
                   <td>{{Ranking.torneoId.nombre}}</td>
                   <td class=" text-center">{{Ranking.puntos}}</td>
                 </tr>
