Mejoras en Listar Jugador, Listar Rankings

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -12,8 +12,8 @@
       <i class=" fa fa-cog fa-2x"> </i>
     </a>
     <ul ngbDropdownMenu>
-      <li class=" header-title">Sidebar Background</li>
-      <li class=" adjustments-line">
+      <li class=" header-title">CONTACTANOS</li>
+      <!--<li class=" adjustments-line">
         <a class=" switch-trigger background-color" href="javascript:void(0)">
           <div class=" badge-colors text-center">
             <span
@@ -32,12 +32,9 @@
           </div>
           <div class=" clearfix"></div>
         </a>
-      </li>
+      </li>-->
       <li class=" adjustments-line text-center color-change">
-        <span class=" color-label"> LIGHT MODE </span>
-        <span class=" badge light-badge mr-2" (click)="changeDashboardColor('white-content')"> </span>
-        <span class=" badge dark-badge ml-2" (click)="changeDashboardColor('black-content')"> </span>
-        <span class=" color-label"> DARK MODE </span>
+        <span class=" color-label"> YiaDo </span>
       </li>
     </ul>
   </div>
