--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
       <span class=" navbar-toggler-bar navbar-kebab"> </span>
     </button>
     <div class=" navbar-collapse" [ngbCollapse]="isCollapsed" id="navigation">
-      <ul class=" navbar-nav ml-auto">
+      <!--<ul class=" navbar-nav ml-auto">
         <li class=" search-bar input-group">
           <button
             class=" btn btn-link"
@@ -109,7 +109,7 @@
           </ul>
         </li>
         <li class=" separator d-lg-none"></li>
-      </ul>
+      </ul>-->
     </div>
   </div>
 </nav>
