--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -334,7 +334,7 @@
               </thead>
               <tbody>
                 <tr *ngFor="let Ranking of Rankings;let indice=index">
-                  <th>{{indice+1}}</th>
+                  <th>{{indice+1}}º</th>
                   <td>{{Ranking.nombre}}</td>
                   <td>{{Ranking.pais}}</td>
                   <td>{{Ranking.residencia}}</td>
