--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class=" footer">
   <div class=" container-fluid">
-    <ul class=" nav">
+    <!--<ul class=" nav">
       <li class=" nav-item">
         <a class=" nav-link" href="https://www.creative-tim.com?ref=bda-footer">
           Creative Tim
@@ -14,11 +14,11 @@
       <li class=" nav-item">
         <a class=" nav-link" href="http://blog.creative-tim.com?ref=bda-footer"> Blog </a>
       </li>
-    </ul>
+    </ul>-->
     <div class=" copyright">
       &copy; {{ test | date: "yyyy" }} made with
       <i class=" tim-icons icon-heart-2"> </i> by
-      <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Creative Tim </a>
+      <a href="https://yiado.cl" target="_blank"> YiaDo </a>
       for a better web.
     </div>
   </div>
