--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
       <img src="./assets/img/angular2-logo-white.png" />
     </div>
   </a>
-  <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-normal">
-    Creative Tim
+  <a href="" class="simple-text logo-normal">
+    Team Pro Vlza
   </a>
 </div>
 <div class="sidebar-wrapper">
