--- a/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
@@ -1,6 +1,6 @@
 .main-panel {
-  &, &[data="red"]{
-    border-color: $danger;
+  &, &[data="blue"]{
+    border-color: $info;
   }
 
   .content {
@@ -26,8 +26,8 @@
     }
 }
 .sidebar, .off-canvas-sidebar{
-  &, &[data="red"]{
-    @include linear-gradient($danger-states, $danger);
+  &, &[data="blue"]{
+    @include linear-gradient($info-states, $info);
   }
   &[data="primary"]{
     @include linear-gradient($primary-states, $primary);
