--- a/src/assets/scss/black-dashboard/custom/_forms.scss
+++ b/src/assets/scss/black-dashboard/custom/_forms.scss
@@ -9,7 +9,7 @@
 
 
   &:focus{
-    border-color: $primary;
+    border-color: $info;
     background-color: $input-bg;
     @include box-shadow(none);
 
