--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -318,18 +318,18 @@
     <div class=" col-lg-12 col-md-12">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" card-title">Tabla General</h4>
+          <h4 class=" card-title">{{NombreTabla}}</h4>
         </div>
         <div class=" card-body">
           <div class=" table-responsive">
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
-                  <th >Posición</th>
-                  <th>Nombre</th>
-                  <th>Pais de Origen</th>
-                  <th>Residencia</th>
-                  <th class=" text-center">Puntos</th>
+                  <th >{{Posicion}}</th>
+                  <th>{{Nombre}}</th>
+                  <th>{{PaisOrigen}}</th>
+                  <th>{{Residencia}}</th>
+                  <th class=" text-center">{{Puntos}}</th>
                 </tr>
               </thead>
               <tbody>
