--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -4,7 +4,7 @@
     <div class=" col-md-12">
       <div class=" card">
         <div class=" card-header">
-          <h4 class=" card-title">Tabla Detalle</h4>
+          <h4 class=" card-title">{{NombreTabla}}</h4>
         </div>
         <form>
           <div class=" row">
@@ -24,11 +24,11 @@
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
-                  <th>Posición</th>
-                  <th>Name</th>
-                  <th>Country</th>
-                  <th>City</th>
-                  <th class=" text-center">Salary</th>
+                  <th>{{Posicion}}</th>
+                  <th>{{Nombre}}</th>
+                  <th>{{Residencia}}</th>
+                  <th>{{Torneo}}</th>
+                  <th class=" text-center">{{Puntos}}</th>
                 </tr>
               </thead>
               <tbody>
