--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -132,8 +132,12 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
           </form>
         </div>
         <div class=" card-footer">
-          <button class=" btn btn-fill btn-danger" type="submit">Save</button>
+          <button class=" btn btn-fill btn-danger" type="submit" (click)="upTabla">Save</button>
         </div>
+        <hr>
+      <div *ngIf="MostrarTabla">
+        <app-dashboard></app-dashboard>
+      </div>
       </div>
     </div>
     <div class=" col-md-4">
