--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
   <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-mini">
     <div class="logo-img">
-      <img src="./assets/img/angular2-logo-white.png" />
+      <img src="./assets/img/theme/logo_champions.png" />
     </div>
   </a>
   <a href="" class="simple-text logo-normal">
@@ -21,4 +21,6 @@
       </a>
     </li>
   </ul>
+  <div>
+  </div>
 </div>
