--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -33,9 +33,24 @@
           <div class=" clearfix"></div>
         </a>
       </li>-->
-      <li class=" adjustments-line text-center color-change">
-        <span class=" color-label"> YiaDo </span>
-      </li>
+      <div class="content">
+        <div class=" row">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-4"></div>
+          <div class="col-lg-1 col-md-1 col-sm-1 col-1">
+            <a href="https://yiado.cl" target="_blank" class="simple-text logo-mini">
+              <div class="logo-img-yiado">
+                <img src="./assets/img/theme/yiado.png" />
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+            <a href="https://yiado.cl" target="_blank" class="simple-text logo-normal">
+              <li class=" header-title">YiaDo</li>
+            </a>
+          </div>
+        </div>
+      </div>
+      
     </ul>
   </div>
 </div>
