--- a/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
@@ -23,6 +23,20 @@
   top: 12px;
     img{
         width: 35px;
+        height: 35px;
+    }
+}
+
+.logo-img-yiado{
+  width: 35px;
+  height: 35px;
+  display: block;
+  margin-left: 2px;
+  position: absolute;
+  top: 12px;
+    img{
+        width: 45px;
+        height: 45px;
     }
 }
 .sidebar, .off-canvas-sidebar{
