--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -315,7 +315,7 @@
         </div>
       </div>
     </div>-->
-    <div class=" col-lg-12 col-md-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
       <div class=" card">
         <div class=" card-header">
           <h4 class=" card-title">{{NombreTabla}}</h4>
