--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -1,15 +1,15 @@
 
 <div class=" content">
   <div class=" row">
-    <div class=" col-md-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
       <div class=" card">
         <div class=" card-header">
           <h4 class=" card-title">{{NombreTabla}}</h4>
         </div>
         <form>
           <div class=" row">
-            <div class=" col-md-1"></div>
-            <div class=" col-md-10">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-1"></div>
+            <div class="col-lg-10 col-md-10 col-sm-10 col-10">
               <div class=" form-group">
                 <select class="form-control" [(ngModel)]="selectTorneo.id" aria-label="Default select example" (change)="onSelect($event.target.value)">
                   <!--<option selected>Seleccione un Torneo</option>-->
