--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -78,6 +78,7 @@
                 </div>
               </div>
             </div>
+            <div *ngIf="mostrartabla">
             <div class=" row">
               <div class=" col-md-4 pr-md-1">
                 <div class=" form-group">
@@ -112,6 +113,7 @@
                 </div>
               </div>
             </div>
+            </div>
             <div class=" row">
               <div class=" col-md-8">
                 <div class=" form-group">
@@ -132,12 +134,12 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
           </form>
         </div>
         <div class=" card-footer">
-          <button class=" btn btn-fill btn-danger" type="submit" (click)="upTabla">Save</button>
+          <button class=" btn btn-fill btn-danger" (click)="upTabla()">Save</button>
         </div>
         <hr>
-      <div *ngIf="MostrarTabla">
+      <!--<div *ngIf="mostrartabla">
         <app-dashboard></app-dashboard>
-      </div>
+      </div>-->
       </div>
     </div>
     <div class=" col-md-4">
