Pasando parametros por url

--- a/src/app/pages/condiciones/condiciones.component.html
+++ b/src/app/pages/condiciones/condiciones.component.html
@@ -3,7 +3,7 @@
       <div class=" col-md-6">
         <div class=" card">
           <div class=" card-header">
-            <h4 class=" card-title">Notifications Style</h4>
+            <h4 class=" card-title">{{ nombre }}</h4>
           </div>
           <div class=" card-body">
             <ngb-alert [type]="'info'" [dismissible]="false">
