--- a/src/app/pages/condiciones/condiciones.component.html
+++ b/src/app/pages/condiciones/condiciones.component.html
@@ -45,6 +45,9 @@
                 notification. So you don't have to worry about the style.
               </span>
             </ngb-alert>
+            <button class=" btn btn-danger btn-block" (click)="redireccion()">
+              Top Left
+            </button>
           </div>
         </div>
       </div>
