--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -137,9 +137,10 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
           <button class=" btn btn-fill btn-danger" (click)="upTabla()">Save</button>
         </div>
         <hr>
-      <!--<div *ngIf="mostrartabla">
-        <app-dashboard></app-dashboard>
-      </div>-->
+      <!--Llamando componentes atraves de directivas, pasando parametros atraves a componentes--> 
+      <div *ngIf="mostrartabla">
+        <app-dashboard [pasandoParametro]="textoParametro"></app-dashboard>
+      </div>
       </div>
     </div>
     <div class=" col-md-4">
