--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,10 +16,7 @@
       </li>
     </ul>-->
     <div class=" copyright">
-      &copy; {{ test | date: "yyyy" }} made with
-      <i class=" tim-icons icon-heart-2"> </i> by
-      <a href="https://yiado.cl" target="_blank"> YiaDo </a>
-      for a better web.
+      <small class="copyright">© Copyright 2021. Designed with <i class="fas fa-heart"></i> by <a href="https://yiado.cl/" target="_blank">Yiado</a>, developers team.</small>
     </div>
   </div>
 </footer>
