--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,14 +1,13 @@
-<div class="logo">
-  <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-mini">
+<div class="logo-team-pro">
+  <a class="simple-text logo-mini">
     <div class="logo-img">
-      <img src="./assets/img/theme/logo_champions.png" />
+      <img src="./assets/img/theme/LogoTP.png" />
     </div>
   </a>
-  <a href="" class="simple-text logo-normal">
-    Team Pro Vlza
-  </a>
 </div>
-<div class="sidebar-wrapper">
+<br><br><br><br><br><br><br><br><br><br>
+<div class="logo"></div>
+<div class="sidebar-wrapper sidebar-bottom-menu">
   <ul class="nav">
     <li
       routerLinkActive="active"
@@ -21,6 +20,4 @@
       </a>
     </li>
   </ul>
-  <div>
-  </div>
 </div>
