--- a/src/assets/scss/black-dashboard/custom/_avatar-group.scss
+++ b/src/assets/scss/black-dashboard/custom/_avatar-group.scss
@@ -8,7 +8,7 @@
 	.avatar {
 		position: relative;
 		z-index: 2;
-		border: 2px solid $card-bg;
+		//border: 2px solid $card-bg;
 
 		&:hover {
 			z-index: 3;
