--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -8,11 +8,11 @@
         </div>
         <form>
           <div class=" row">
-            <div class="col-lg-1 col-md-1 col-sm-1 col-1"></div>
-            <div class="col-lg-10 col-md-10 col-sm-10 col-10">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4"></div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
               <div class=" form-group">
-                <select class="form-control" [(ngModel)]="selectTorneo.id" aria-label="Default select example" (change)="onSelect($event.target.value)">
-                  <!--<option selected>Seleccione un Torneo</option>-->
+                <select class="form-control" aria-label="Default select example" (change)="onSelect($event.target.value)">
+                  <option selected>Seleccione un Torneo</option>
                   <option *ngFor="let tor of Torneos" value="{{tor.id}}">{{tor.nombre}}</option>
                 </select>
               </div>
@@ -24,25 +24,25 @@
             <table class=" table tablesorter" id="">
               <thead class=" text-primary">
                 <tr>
-                  <th>{{Posicion}}</th>
-                  <th>{{Nombre}}</th>
-                  <th>{{Residencia}}</th>
-                  <th>{{Torneo}}</th>
+                  <th class=" text-center">{{Posicion}}</th>
+                  <th class=" text-center">{{Nombre}}</th>
+                  <th class=" text-center">{{Residencia}}</th>
+                  <th class=" text-center">{{Torneo}}</th>
                   <th class=" text-center">{{Puntos}}</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let Ranking of Rankings;let indice=index">
-                  <td>{{indice+1}}º</td>
-                  <td>{{Ranking.jugadorId.nombre}}</td>
-                  <td>
+                  <td class=" text-center">{{indice+1}}º</td>
+                  <td class=" text-center">{{Ranking.jugadorId.nombre}}</td>
+                  <td class=" text-center">
                     <div class="avatar-group">
-                      <a href="javascript:void(0)" class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Venezuela">
+                      <a class="avatar avatar-sm" data-toggle="tooltip" data-original-title="Venezuela">
                         <img alt="Image placeholder" [src]="(imgPath + Ranking.jugadorId.residencia + imgExt)" class="rounded-circle">
                       </a>
                     </div>
                   </td>
-                  <td>{{Ranking.torneoId.nombre}}</td>
+                  <td class=" text-center">{{Ranking.torneoId.nombre}}</td>
                   <td class=" text-center">{{Ranking.puntos}}</td>
                 </tr>
               </tbody>
