--- a/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard/angular-differences/_sidebar-and-main-panel.scss
@@ -15,15 +15,15 @@
   }
 }
 .logo-img{
-  width: 35px;
-  height: 35px;
+  width: 185px;
+  height: 185px;
   display: block;
-  margin-left: 2px;
+  //margin-left: 2px;
   position: absolute;
   top: 12px;
     img{
-        width: 35px;
-        height: 35px;
+        width: 185px;
+        height: 185px;
     }
 }
 
@@ -39,6 +39,15 @@
         height: 45px;
     }
 }
+
+.logo-team-pro {
+    //padding: 0.5rem 1.3rem;
+    z-index: 4;
+    display: block;
+    margin-left: 10%;
+    margin-right: auto;
+}
+
 .sidebar, .off-canvas-sidebar{
   &, &[data="blue"]{
     @include linear-gradient($info-states, $info);
