Mejora en ranking general

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -381,12 +381,12 @@
                       </a>
                     </div>
                   </td>
-                  <td class=" text-center"></td>
+                  <td class=" text-center">{{Ranking.temporadas}}</td>
                   <td class=" text-center">{{Ranking.puntosGlobales}}</td>
-                  <td class=" text-center"></td>
-                  <td class=" text-center"></td>
-                  <td class=" text-center"></td>
-                  <td class=" text-center"></td>
+                  <td class=" text-center">{{Ranking.oro}}</td>
+                  <td class=" text-center">{{Ranking.plata}}</td>
+                  <td class=" text-center">{{Ranking.bronce}}</td>
+                  <td class=" text-center">{{Ranking.mejorPosicion}}</td>
                 </tr>
               </tbody>
             </table>
